# afiando-machado

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github_ci.yml
docker-afiando-machado/: docker-compose.yml
mysite/: settings.py
mysite/base/migrations/: 0001_initial.py
